--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "2dfb36c9",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "a3976fc0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "27ed62d4",
    "metadata": {},
    "outputs": [],
@@ -96,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "configured-probe",
+   "execution_count": 4,
+   "id": "prepared-cooking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "id": "f4bfd120",
    "metadata": {},
    "outputs": [],
@@ -216,13 +216,15 @@
     "            for d in range(D):\n",
     "                for n in range(V):\n",
     "                    for m in range(len(self.Z[d,n])):\n",
-    "                        self.W[d] += np.random.multinomial(1, self.B[self.Z[d,n,m]], size=1)\n",
+    "                        mult = np.random.multinomial(1, self.B[int(self.Z[d,n,m])], size=1)\n",
+    "                        index = int(np.where(mult == 1)[-1])\n",
+    "                        self.W[d, index] += 1\n",
     "            print('Success: W generated from Z')\n",
     "            return 0\n",
     "        \n",
     "    def generate_Z_from_W(self):\n",
     "        m = self.get_M()\n",
-    "        self.Z = np.zeros((D, V, int(m)))\n",
+    "        self.Z = - np.ones((D, V, int(m)))\n",
     "        # Multinomial drawing from Theta, because it has to be normalized\n",
     "        # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "        # np.random.multinomial(1, self.Theta[d], size=1)\n",
@@ -234,7 +236,7 @@
     "            for n in range(V):\n",
     "                for m in range(self.W[d,n]):\n",
     "                    mult = np.random.multinomial(1, self.Theta[d], size=1)\n",
-    "                    self.Z[d,n,m] = np.where(mult == 1)\n",
+    "                    self.Z[d,n,m] = int(np.where(mult == 1))\n",
     "        print('Success: Z generated from Theta')\n",
     "        return 0\n",
     "    \n",
@@ -586,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "fb471d89",
    "metadata": {},
    "outputs": [],
@@ -653,34 +655,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "b257621a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'seed'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 10 5\n",
+      "Success: Sigma transformed from K\n",
+      "Success: Theta transformed from H\n",
+      "Success: Z generated from Theta\n",
+      "Success: W generated from M\n",
+      "Success: E transformed from Z\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'update_G' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_5110/3565624184.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSIM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample_GK\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Will get G, K, Sigma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample_H\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Will get H, Theta from Sigma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_Z_from_M\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Will get Z from Theta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample_B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Will get B\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'seed'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/rf/5nlh7d614dv776hsw07gt5x80000gn/T/ipykernel_2463/1304162677.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# generate W from Z debugged (below)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mG\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mupdate_G\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'update_G' is not defined"
      ]
     }
    ],
    "source": [
-    "test = SIM(D, V, k)\n",
+    "test = SIM(D, V, k, seed=1996)\n",
     "test.sample_GK(gamma)  # Will get G, K, Sigma\n",
     "test.sample_H()  # Will get H, Theta from Sigma\n",
     "test.generate_Z_from_M(M)  # Will get Z from Theta\n",
     "test.sample_B()  # Will get B\n",
     "test.generate_W_from_M(M)  # Will get W\n",
     "test.update_E()\n",
-    "# generate W from Z needs debugging\n",
+    "# generate W from Z debugged (below)\n",
     "\n",
     "G = update_G(test.W, test.Z, test.H, test.K, test.G, test.E)\n",
     "print(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "hollywood-bobby",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [2., 3., 4., 1., 3., 0., 0., 0., 0., 0.],\n",
+       "        [3., 3., 0., 0., 0., 2., 0., 0., 1., 0.],\n",
+       "        [3., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 2., 1., 0., 0., 0., 0., 0., 2., 0.],\n",
+       "        [4., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 2., 0., 4., 0., 4., 0., 0., 0.],\n",
+       "        [3., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 0., 2., 2., 2., 4., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 4., 3., 0., 2., 1., 0., 0., 0., 0.],\n",
+       "        [2., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 2., 3., 0., 1., 0., 3., 0., 0., 0.],\n",
+       "        [3., 1., 3., 1., 0., 2., 2., 0., 0., 0.],\n",
+       "        [4., 3., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 3., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 2., 4., 4., 3., 3., 0., 0., 0., 0.],\n",
+       "        [0., 3., 1., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 2., 2., 2., 2., 4., 4., 0., 0., 0.],\n",
+       "        [0., 3., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [4., 2., 2., 2., 3., 2., 2., 4., 0., 0.],\n",
+       "        [2., 2., 3., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [2., 2., 2., 2., 3., 2., 1., 3., 0., 0.],\n",
+       "        [2., 2., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [2., 2., 2., 2., 1., 1., 4., 4., 0., 0.],\n",
+       "        [2., 4., 4., 2., 4., 2., 2., 2., 0., 0.],\n",
+       "        [2., 4., 2., 4., 4., 2., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [2., 2., 2., 0., 2., 2., 2., 0., 0., 0.],\n",
+       "        [2., 4., 2., 2., 2., 2., 2., 0., 0., 0.],\n",
+       "        [2., 2., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 2., 2., 2., 1., 2., 2., 0., 0., 0.],\n",
+       "        [1., 2., 2., 2., 0., 2., 2., 2., 0., 0.],\n",
+       "        [2., 1., 2., 2., 1., 2., 2., 0., 0., 0.],\n",
+       "        [1., 2., 2., 2., 2., 2., 2., 0., 0., 0.],\n",
+       "        [2., 2., 2., 0., 2., 2., 0., 0., 0., 0.],\n",
+       "        [2., 2., 2., 2., 2., 2., 2., 0., 0., 0.]],\n",
+       "\n",
+       "       [[3., 2., 3., 3., 3., 2., 3., 0., 0., 0.],\n",
+       "        [4., 3., 4., 3., 4., 3., 3., 3., 1., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 0., 2., 1., 2., 3., 2., 3., 0., 0.],\n",
+       "        [3., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [3., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 3., 3., 3., 0., 0., 0., 0., 0., 0.],\n",
+       "        [4., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 3., 4., 2., 2., 3., 3., 4., 0., 0.],\n",
+       "        [2., 3., 4., 3., 0., 0., 0., 0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.Z"
    ]
   },
   {
@@ -690,13 +778,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: W generated from Z\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0]])"
+       "0"
       ]
      },
      "execution_count": 45,
@@ -705,7 +796,35 @@
     }
    ],
    "source": [
-    "test.G"
+    "test.generate_W_from_Z()\n",
+    "# Note for debugging:\n",
+    "# After updating the class, you need to re run the class object initialization\n",
+    "# Else for some reason it uses the outdated code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "individual-array",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13.,  4., 11., 15.,  6., 14., 20., 21., 19., 17.],\n",
+       "       [20.,  0., 10., 20.,  3.,  2., 21., 20., 24., 27.],\n",
+       "       [17.,  4., 19., 20.,  5., 11., 14., 24., 12., 21.],\n",
+       "       [12.,  8., 17., 18., 10., 10., 12., 26., 18., 25.],\n",
+       "       [11.,  6., 15., 18.,  1., 11.,  9., 22., 19., 18.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.W"
    ]
   },
   {
@@ -718,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "818976a1",
    "metadata": {},
    "outputs": [
@@ -739,7 +858,7 @@
        "0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "3b6e00ca",
    "metadata": {},
    "outputs": [
@@ -770,7 +889,7 @@
        "       [8., 7., 0., 8., 4., 5., 5., 2., 6., 6.]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,10 +962,10 @@
     "\n",
     "for iteration in range(max_iteration):\n",
     "    Z = CGS(Z, W, Theta, B, E, C)\n",
-    "    # get E from Z ...\n",
-    "    # get C from Z ...\n",
+    "    E = update_E(E, Z)  # get E from Z\n",
+    "    C = update_C(C, Z)  # get C from Z ...\n",
     "    H = H_sampler(E, Sigma)\n",
-    "    # get Theta from H\n",
+    "    Theta = update_Theta(Theta, H)  # get Theta from H\n",
     "    G = update_G(W,Z,H,K,G)\n",
     "    K = update_K(G, b, shape_matrix)\n",
     "    Sigma = np.inv(K)\n",
