--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "2dfb36c9",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "a3976fc0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "27ed62d4",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "prepared-cooking",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "f4bfd120",
    "metadata": {},
    "outputs": [],
@@ -201,26 +201,43 @@
     "            return 1\n",
     "        \n",
     "    def generate_W_from_Z(self):\n",
-    "        if np.sum(self.B, axis=1).sum(axis=0) == 0:\n",
-    "            print('Error: Beta matrix 0')\n",
-    "            return 1\n",
-    "        elif np.sum(self.Z, axis=2).sum(axis=1).sum(axis=0) == 0:\n",
+    "        if np.sum(self.Z, axis=2).sum(axis=1).sum(axis=0) == 0:\n",
     "            print('Error: Z matrix 0')\n",
     "            return 1\n",
     "        else:\n",
-    "            # Multinomial drawing from Z, B\n",
+    "            # We just need the lengths of Z[d,n]\n",
+    "            # Since that gives the repetitions of word n in doc d\n",
+    "            for d in range(D):\n",
+    "                for n in range(V):\n",
+    "                    # This gives the index of the element next to the end of Z\n",
+    "                    # Hence its already decreased to give the amounts\n",
+    "                    derp = np.where(self.Z[d,n] == -1)\n",
+    "                    rep = derp[-1][0]\n",
+    "                    self.W[d, n] = int(rep)\n",
+    "            print('Success: W generated from Z')\n",
+    "            return 0\n",
+    "    \n",
+    "    #def generate_W_from_B(self):\n",
+    "    #    if np.sum(self.B, axis=1).sum(axis=0) == 0:\n",
+    "    #        print('Error: Beta matrix 0')\n",
+    "    #        return 1\n",
+    "    #    else:\n",
+    "            # Multinomial drawing from B\n",
     "            # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "            # Params: samples (counts), probabilities, repetitions (different vectors)\n",
     "            # np.random.multinomial(1, self.B[Z[d,n,m]], size=1)\n",
     "            # This will give a canonical vector over V\n",
-    "            for d in range(D):\n",
-    "                for n in range(V):\n",
-    "                    for m in range(len(self.Z[d,n])):\n",
-    "                        mult = np.random.multinomial(1, self.B[int(self.Z[d,n,m])], size=1)\n",
-    "                        index = int(np.where(mult == 1)[-1])\n",
-    "                        self.W[d, index] += 1\n",
-    "            print('Success: W generated from Z')\n",
-    "            return 0\n",
+    "    #        for d in range(D):\n",
+    "    #            for n in range(V):\n",
+    "                    # If we have Z, we have the words well generated\n",
+    "                    # We need to know the repetitions but at the same time not??\n",
+    "                    # Beta helps allocating them but we don't know how many times\n",
+    "    #                for m in range(repeats):\n",
+    "    #                    mult = np.random.multinomial(1, self.B[int(self.Z[d,n,m])], size=1)\n",
+    "    #                    index = int(np.where(mult == 1)[-1])\n",
+    "    #                    self.W[d, index] += 1\n",
+    "    #        print('Success: W generated from Z')\n",
+    "    #        return 0\n",
     "        \n",
     "    def generate_Z_from_W(self):\n",
     "        m = self.get_M()\n",
@@ -241,7 +258,7 @@
     "        return 0\n",
     "    \n",
     "    def generate_Z_from_M(self, M):\n",
-    "        self.Z = np.zeros((D, V, M))\n",
+    "        self.Z = - np.ones((D, V, int(M)))\n",
     "        # Multinomial drawing from Theta, because it has to be normalized\n",
     "        # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "        # np.random.multinomial(1, self.Theta[d], size=1)\n",
@@ -654,8 +671,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "improving-mortgage",
+   "metadata": {},
+   "source": [
+    "# TESTING"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "b257621a",
    "metadata": {},
    "outputs": [
@@ -678,7 +703,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/rf/5nlh7d614dv776hsw07gt5x80000gn/T/ipykernel_2463/1304162677.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# generate W from Z debugged (below)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mG\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mupdate_G\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/rf/5nlh7d614dv776hsw07gt5x80000gn/T/ipykernel_3189/1304162677.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# generate W from Z debugged (below)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mG\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mupdate_G\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'update_G' is not defined"
      ]
     }
@@ -699,70 +724,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "hollywood-bobby",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [2., 3., 4., 1., 3., 0., 0., 0., 0., 0.],\n",
-       "        [3., 3., 0., 0., 0., 2., 0., 0., 1., 0.],\n",
-       "        [3., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [1., 2., 1., 0., 0., 0., 0., 0., 2., 0.],\n",
-       "        [4., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 2., 0., 4., 0., 4., 0., 0., 0.],\n",
-       "        [3., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 0., 2., 2., 2., 4., 0., 0., 0., 0.]],\n",
+       "array([[[ 0.,  0.,  0., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  4., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  3.,  4.,  1.,  3.,  0., -1., -1., -1., -1.],\n",
+       "        [ 3.,  3.,  0.,  0.,  0.,  2.,  0.,  0.,  1., -1.],\n",
+       "        [ 3.,  0.,  0.,  0., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  2.,  1.,  0.,  0.,  0.,  0.,  0.,  2., -1.],\n",
+       "        [ 4.,  0.,  0.,  0.,  1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  0.,  2.,  0.,  4.,  0.,  4., -1., -1., -1.],\n",
+       "        [ 3.,  0.,  0.,  1.,  0., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  0.,  2.,  2.,  2.,  4.,  0., -1., -1., -1.]],\n",
        "\n",
-       "       [[0., 0., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 4., 3., 0., 2., 1., 0., 0., 0., 0.],\n",
-       "        [2., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 2., 3., 0., 1., 0., 3., 0., 0., 0.],\n",
-       "        [3., 1., 3., 1., 0., 2., 2., 0., 0., 0.],\n",
-       "        [4., 3., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 3., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 2., 4., 4., 3., 3., 0., 0., 0., 0.],\n",
-       "        [0., 3., 1., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "       [[ 0.,  0.,  2., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  4.,  3.,  0.,  2.,  1., -1., -1., -1., -1.],\n",
+       "        [ 2., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  2.,  3.,  0.,  1.,  0.,  3., -1., -1., -1.],\n",
+       "        [ 3.,  1.,  3.,  1.,  0.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 4.,  3.,  2., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  3., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  2.,  4.,  4.,  3.,  3., -1., -1., -1., -1.],\n",
+       "        [ 0.,  3.,  1., -1., -1., -1., -1., -1., -1., -1.]],\n",
        "\n",
-       "       [[0., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 2., 2., 2., 2., 4., 4., 0., 0., 0.],\n",
-       "        [0., 3., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [4., 2., 2., 2., 3., 2., 2., 4., 0., 0.],\n",
-       "        [2., 2., 3., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [2., 2., 2., 2., 3., 2., 1., 3., 0., 0.],\n",
-       "        [2., 2., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [2., 2., 2., 2., 1., 1., 4., 4., 0., 0.],\n",
-       "        [2., 4., 4., 2., 4., 2., 2., 2., 0., 0.],\n",
-       "        [2., 4., 2., 4., 4., 2., 0., 0., 0., 0.]],\n",
+       "       [[ 0.,  4., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  2.,  2.,  2.,  2.,  4.,  4., -1., -1., -1.],\n",
+       "        [ 0.,  3.,  2., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 4.,  2.,  2.,  2.,  3.,  2.,  2.,  4., -1., -1.],\n",
+       "        [ 2.,  2.,  3., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  3.,  2.,  1.,  3., -1., -1.],\n",
+       "        [ 2.,  2., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  1.,  1.,  4.,  4., -1., -1.],\n",
+       "        [ 2.,  4.,  4.,  2.,  4.,  2.,  2.,  2., -1., -1.],\n",
+       "        [ 2.,  4.,  2.,  4.,  4.,  2., -1., -1., -1., -1.]],\n",
        "\n",
-       "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [2., 2., 2., 0., 2., 2., 2., 0., 0., 0.],\n",
-       "        [2., 4., 2., 2., 2., 2., 2., 0., 0., 0.],\n",
-       "        [2., 2., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 2., 2., 2., 1., 2., 2., 0., 0., 0.],\n",
-       "        [1., 2., 2., 2., 0., 2., 2., 2., 0., 0.],\n",
-       "        [2., 1., 2., 2., 1., 2., 2., 0., 0., 0.],\n",
-       "        [1., 2., 2., 2., 2., 2., 2., 0., 0., 0.],\n",
-       "        [2., 2., 2., 0., 2., 2., 0., 0., 0., 0.],\n",
-       "        [2., 2., 2., 2., 2., 2., 2., 0., 0., 0.]],\n",
+       "       [[-1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  0.,  2.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 2.,  4.,  2.,  2.,  2.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  2.,  2.,  2.,  1.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 1.,  2.,  2.,  2.,  0.,  2.,  2.,  2., -1., -1.],\n",
+       "        [ 2.,  1.,  2.,  2.,  1.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 1.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  0.,  2.,  2., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1.]],\n",
        "\n",
-       "       [[3., 2., 3., 3., 3., 2., 3., 0., 0., 0.],\n",
-       "        [4., 3., 4., 3., 4., 3., 3., 3., 1., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 0., 2., 1., 2., 3., 2., 3., 0., 0.],\n",
-       "        [3., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 3., 3., 3., 0., 0., 0., 0., 0., 0.],\n",
-       "        [4., 4., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [1., 3., 4., 2., 2., 3., 3., 4., 0., 0.],\n",
-       "        [2., 3., 4., 3., 0., 0., 0., 0., 0., 0.]]])"
+       "       [[ 3.,  2.,  3.,  3.,  3.,  2.,  3., -1., -1., -1.],\n",
+       "        [ 4.,  3.,  4.,  3.,  4.,  3.,  3.,  3.,  1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  0.,  2.,  1.,  2.,  3.,  2.,  3., -1., -1.],\n",
+       "        [ 3., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 3.,  4., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  3.,  3.,  3.,  0., -1., -1., -1., -1., -1.],\n",
+       "        [ 4.,  4., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  3.,  4.,  2.,  2.,  3.,  3.,  4., -1., -1.],\n",
+       "        [ 2.,  3.,  4.,  3., -1., -1., -1., -1., -1., -1.]]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "ac98bb98",
    "metadata": {},
    "outputs": [
@@ -790,7 +815,7 @@
        "0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,21 +829,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "individual-array",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[13.,  4., 11., 15.,  6., 14., 20., 21., 19., 17.],\n",
-       "       [20.,  0., 10., 20.,  3.,  2., 21., 20., 24., 27.],\n",
-       "       [17.,  4., 19., 20.,  5., 11., 14., 24., 12., 21.],\n",
-       "       [12.,  8., 17., 18., 10., 10., 12., 26., 18., 25.],\n",
-       "       [11.,  6., 15., 18.,  1., 11.,  9., 22., 19., 18.]])"
+       "array([[3., 2., 6., 9., 4., 9., 5., 7., 5., 7.],\n",
+       "       [3., 6., 1., 0., 7., 7., 3., 2., 6., 3.],\n",
+       "       [2., 7., 3., 8., 3., 8., 2., 8., 8., 6.],\n",
+       "       [0., 7., 7., 3., 7., 8., 7., 7., 6., 7.],\n",
+       "       [7., 9., 0., 8., 1., 2., 5., 2., 8., 4.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "818976a1",
    "metadata": {},
    "outputs": [
@@ -858,7 +883,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "3b6e00ca",
    "metadata": {},
    "outputs": [
@@ -889,7 +914,7 @@
        "       [8., 7., 0., 8., 4., 5., 5., 2., 6., 6.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
